# CSpy

./: .env.preview  .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VERSIONING-SETUP.md  commitlint.config.js  cspy-keys.example.json  eslint.config.js  install.sh  package-lock.json  package.json  release-please-config.json  vite.config.ts
.github/workflows/: build-and-release.yml  build-apk.yml  commitlint.yml  preview-build.yml  test.yml
docs/superpowers/plans/: 2026-04-08-frontend-heartbeat-watchdog.md  2026-04-08-stale-build-prevention.md  2026-04-08-test-suite.md
docs/superpowers/specs/: 2026-04-01-5hour-dynamic-icon-design.md  2026-04-08-stale-build-prevention-design.md  2026-04-08-test-suite-design.md  2026-04-11-icon-text-countdown-design.md
scripts/: dev.sh  switch_dev  switch_prev  switch_prod
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.local.conf.json  tauri.preview.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: icon.rs  keychain.rs  lib.rs  main.rs  usage.rs
src-tauri/tests/: fetch_usage.rs
src/lib/: types.test.ts  types.ts
src/routes/: +page.svelte  page.test.ts
