[package]
name = "cspy"
version = "0.1.0"
description = "Menu bar usage monitor for Claude AI"
authors = ["Chas Newport"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cspy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-notification = "2.2.1"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "time", "sync"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros"] }
